--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,38 +1,140 @@
-.App {
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.app1 {
+  left: 50%;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 8px;
+  margin-top: 7vh;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: flex;
+  display: flex;
+}
+/* styles.css */
+
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  background-color: #3498db;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  width: 100%; /* Largeur à 100% */
+  height: 7vh;
+}
+
+.navbar a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 15px;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+}
+
+h1 {
+  color: #333;
+}
+
+.todo-list {
+  margin-top: 20px;
+}
+
+form {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+input {
+  flex: 1;
+  padding: 8px;
+  font-size: 16px;
+}
+
+button {
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 8px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 8px;
+  border-bottom: 1px solid #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.completed {
+  text-decoration: line-through;
+  color: #777;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="checkbox"] {
+  margin-right: 8px;
+}
+
+button {
+  background-color: #ff3333;
+  color: #fff;
+  border: none;
+  padding: 4px 8px;
+  cursor: pointer;
+  font-size: 14px;
+  margin-left: auto;
+}
+/* contact*/
+
+.contact {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contact h2 {
+  color: #333;
+}
+
+.contact p {
+  color: #555;
+  font-size: 16px;
+}
+
+.contact a {
+  color: #4caf50;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.contact a:hover {
+  text-decoration: underline;
+}
+
+.app-footer {
+  background-color: #f0f0f0;
+  padding: 10px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0; 
+  right: 0; 
 }
