--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -138,3 +138,11 @@ button {
   left: 0; 
   right: 0; 
 }
+.api{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  background-color: #b63030;
+}
